# XLog

./: .gitignore
lib/: XLog.exp  XLog.lib  XLogD.exp  XLogD.lib
src/: CMakeLists.txt  IXLog.h  XLog.cpp  XLog.h
